# vtk-wasm-course

./: .gitignore  README.md
Part-1/: SetupEMSDK.md
Part-1/01-CompilingCppWasm/: README.md  hello.cpp
Part-1/02-CustomHTML/: README.md  fibonacci-incorrect.cpp  fibonacci.cpp  index.html
Part-1/03-WebAssemblyImportExport/: README.md  simple.js  simple.wat
Part-1/04-Memory/: README.md  accumulate.html  memory-growth.html  memory.html
Part-1/05-Table/: README.md  index.html
Part-1/06-Global/: README.md  index.html
Part-1/07-Env/: README.md  index.html  main.cpp
Part-1/08-Args/: README.md  main.cpp
Part-2/Exercises/01-RunExamples/: HW.md
Part-2/Exercises/02-FileViewer/: CMakeLists.txt  FileViewer.cpp  README.md  index.js
Part-2/Exercises/02-FileViewer/Solution/: CMakeLists.txt  FileViewer.cpp  index.html  index.js
Part-2/Exercises/02-FileViewer/Solution/utilities/: writeFileToWasmMemory.js
Part-2/Exercises/02-FileViewer/utilities/: writeFileToWasmMemory.js
Part-4/Exercises/: README.md  requirements.txt
Part-4/Exercises/01-WASMLocalView/: FileViewer-Solution.py  FileViewer.py
Part-4/Exercises/02-RunExamples/: HW.md
